# deepflow

./: .gitignore  ARCHIVE_STATUS.md  CHANGELOG.md  CODING_STANDARDS.md  DEVELOPMENT_RULES.md  LICENSE  OPENCLAW_AGENT_MECHANISM_REFERENCE.md  PROTOCOLS.md  PROTOCOLS_README.md  README.md  SKILL.md  SYSTEM_PROMPT.md  UNIFIED_ENTRY_IMPLEMENTATION.md  __init__.py  ci.sh  cleanup_plan.sh  deepflow.py  nightly_test_log.md  orchestrator_agent.py  orchestrator_agent.py.bak.20260423  pyproject.toml  pytest.ini  requirements.txt  run_orchestrator.sh  run_solution_test.py  run_test_modes.sh  run_tests.sh  run_validation.sh  test_data_collection.py  test_dogfooding_real.py  test_model_chain.py  test_modes.py  test_report.md  test_solution_e2e.py  test_solution_init.py  test_solution_simple.py
ARCHIVED/: MIGRATION_GUIDE.md  V1_BLUEPRINT.md
audit_reports/: prompt_correctness_2026-04-19.md
cage/: DEVELOPMENT_CONTRACT.md  PROMPT_REFACTOR_V2.0.md  README.md  add_force_rebuild_contract.md  architecture_compliance_report.md  auto_send_report_contract.md  batch_refactor_remaining.py  blackboard_manager.yaml  ci_scripts.yaml  clear_git_history_contract.md  config_analysis_report.md  config_loader.yaml  conftest.yaml  convergence_rules.yaml  coordinator.yaml  create_unified_entry_contract.md  data_layer_contract.yaml  data_manager.yaml  data_manager_agent.yaml  data_manager_contract.yaml  data_providers.yaml  docs_alignment_contract.md  domain_investment.yaml  domain_solution.yaml  dynamic_agent_contract.yaml  e2e_test_smic_2026_contract.md  execution_preplay_report.md  fix_io_contract.yaml  (+116 more)
(+215 files in other folders)
