[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepflow"
version = "0.1.0"
description = "全自动多Agent协作研究管线"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "小满", email = "example@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
# deepflow = "core.unified_entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "domains*", "data_providers*", "providers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "check_*.py"]
